# python-dsp

./: .gitignore  README.md  config.py  pyproject.toml  setup.py
dsp/: main.py  qt.py
