[tool.poetry]
name = "python-dsp"
version = "0.1.0"
description = ""
authors = ["Kris <31852063+krisfris@users.noreply.github.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"
pyqtgraph = "^0.11.0"
matplotlib = "^3.3.1"
pyaudio = "^0.2.11"
pyqt5 = "^5.15.0"
scipy = "^1.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
